fix(VSelect, VCombobox, VAutocomplete): truncate selection text regarless of singline-line
fixes #17627

--- a/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
+++ b/packages/vuetify/src/components/VAutocomplete/VAutocomplete.sass
@@ -26,11 +26,10 @@
     .v-autocomplete__selection
       margin-inline-end: 2px
 
-  .v-field--single-line
-    .v-autocomplete__selection-text
-      overflow: hidden
-      text-overflow: ellipsis
-      white-space: nowrap
+  .v-autocomplete__selection-text
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
 
 .v-autocomplete
   &__content
