--- a/packages/vuetify/src/components/VCombobox/VCombobox.sass
+++ b/packages/vuetify/src/components/VCombobox/VCombobox.sass
@@ -26,11 +26,10 @@
     .v-combobox__selection
       margin-inline-end: 2px
 
-  .v-field--single-line
-    .v-combobox__selection-text
-      overflow: hidden
-      text-overflow: ellipsis
-      white-space: nowrap
+  .v-combobox__selection-text
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
 
 .v-combobox
   &__content
